<resources>
    //Nombre de app
    <string name="app_name">Conociendo Arrigorriaga</string>
    <string name="title_activity__mapa">map</string>
    //Activity Idiomas
    <string name="euskera">EUSKERA</string>
    <string name="español">CASTELLANO</string>
    //Activity Inicio
    <string name="presentacion"><p>¡Hola! Bienvenidos a la APP para conocer Arrigorriaga. Soy Mikel Rico,
        jugador del Athletic Club de Bilbao, y como la mayoría de vosotros soy de
        Arrigorriaga. Esta mañana voy a acompañaros en esta excursión,
        ayudándoos a conocer mejor nuestro pueblo; antes de empezar os daré
                algunos datos que pueden seros útiles. </p> \n \n<p>Arrigorriaga es un pueblo cercano a Bilbao, próximo al río Nervión y con
        alrededor de 12.000 ciudadanos.</p> \n \n<p>Nuestro objetivo de hoy va a ser conocer el patrimonio cultural de nuestro
        pueblo (en su mayoría patrimonio religioso: iglesias, ermitas..) pero también
        hay edificios civiles, los cuales ireis conociendo durante la mañana.</p>\n\n <p>Así que, sin más rodeos, haced CLICK en el mapa que está debajo de mi.
        Aquí empieza vuestra excursión!</p>
    </string>
    //Activity Pista 1
    <string name="pista1"> En las fiestas de nuestro pueblo venimos aquí a escuchar conciertos hacer diferentes actividades.</string>
    <string name="pista1opcion1"> Plaza de Argala</string>
    <string name="pista1opcion2">Escuela</string>
    <string name="pista1opcion3">Iglesia</string>
    //Activity Pantalla 1
    <string name="audiozona1">Escucha este audio sobre la Plaza de Arrigorriaga.</string>
    <string name="audio">Audio</string>
    //Activity Pista 2
    <string name="pista2">​En​ ​este​ ​edificio​ ​se​ ​deciden​ ​las​ ​leyes​ ​de​ ​Arrigorriaga</string>
    <string name="pista2opcion1"> Ambulatorio</string>
    <string name="pista2opcion2">Biblioteca</string>
    <string name="pista2opcion3">Ayuntamiento</string>
    //Activity Pantalla 2
    <string name="audiozona2">Escucha este audio sobre el Ayuntamiento de Arrigorriaga.</string>
    <string name="mensaje_sopa">Busca estas cuatro palabras en la sopa de letras: Alcalde, Concejal, Leyes y política.</string>
    <string name="letra">A</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="alcalde">El alcalde de Arrigorriaga es Asier Albizua Manrique.</string>
    <string name="leyes">El ayuntamiento hace que las leyes se cumplan.</string>
    <string name="concejal">En el ayuntamiento de Arrigorriaga hay 11 concejales.</string>
    <string name="politica">"EAJ-PNV, EH-Bildu, PSE-PSOE y Arrigorriaga Gara son los 4 partidos políticos que hay en el ayuntamiento."</string>
    <string name="pol">Política:</string>
    <string name="ley">Leyes:</string>
    <string name="conce">Concejal:</string>
    <string name="alca">Alcalde:</string>
    <string name="saltaraudio">Saltar audio</string>
    //Activity Pista 3
    <string name="pista3">Los domingos, los habitantes de Arrigorriaga a dónde suelen ir a rezar?</string>
    <string name="casa_cultura">Casa cultura</string>
    <string name="iglesia">Iglesia</string>
    <string name="escuela">Escuela</string>
    //Activity Pantalla 3
    <string name="enunciado_Santa_Maria">En el siguiente ejercicio aparecerán 4 diferentes oraciones. Tienes que elegir la respuesta correcta. Para empezar pulsa sobre la flecha.</string>
    <string name="pregunta1_Santa_Maria">El nombre de la parroquia de Arrigorriaga es...</string>
    <string name="respuesta1_buena">SANTA MARIA MAGDALENA</string>
    <string name="respuesta1_mala">SANTA TERESA MAGDALENA</string>
    <string name="respuesta1corregida">Es Santa Maria Magdalena.</string>
    <string name="pregunta2_Santa_Maria">La parroquia de Santa Maria Magdalena es del siglo XX.</string>
    <string name="respuesta2_buena">FALSO</string>
    <string name="respuesta2_mala">VERDADERO</string>
    <string name="respuesta2corregida">La parroquia es del siglo IX.</string>
    <string name="pregunta3_Santa_Maria">La parroquia mantiene el aspecto de su época.</string>
    <string name="respuesta3_buena">FALSO</string>
    <string name="respuesta3_mala">VERDADERO</string>
    <string name="respuesta3corregida">La parroquia está totalmente reformada.</string>
    <string name="pregunta4_Santa_Maria">En esta foto aparece la parroquia Santa Maria Magdalena.</string>
    <string name="respuesta4_buena">VERDADERO</string>
    <string name="respuesta4_mala">FALSO</string>
    <string name="explicacion">Como sabéis, en Arrigorriaga hay otros edificios que también son religiosos, por ejemplo las ermitas.</string>
    <string name="pregunta5_Santa_MAria">Es una ermita pequeña. Está situada en el barrio de Abrisketa. ¿Cuál es?</string>
    <string name="respuesta51_mala">Ermita de San Luis de Bilbao.</string>
    <string name="respuesta5_buena">Ermita de San Pedro Abrisketa.</string>
    <string name="respuesta52_mala">Ermita de San Telmo de Vitoria.</string>
    <string name="respuesta53_mala">Ermita de Santa Marta de Donostia.</string>
    <string name="respuesta5corregida">Está en el barrio de Abrisketa. La romería en honor a San Pedro, se celebra el primer domingo después del 29 de junio. Es la más vieja de Bizkaia, del siglo XII, y de estilo románico.</string>
    //Activity Pista 4
    <string name="pista4">En este podemos ver teatros y películas</string>
    <string name="salalonbo">Sala Lonbo</string>
    <string name="ayuntamiento">Ayuntamiento</string>
    //Activity Pantalla 4

    <string name="txtlonbo1">Industralización</string>
    <string name="txtlonbo2">Teatro</string>
    <string name="txtlonbo3">Tiendas</string>
    <string name="txtlonbo4">Informática</string>
    <string name="txtlonbo5">Trabajos</string>
    <string name="txtlonbo6">Cine</string>

    //Activity Pista 5
    <string name="enunciado_pista5">Une las piezas del siguiente puzzle para crear la foto de la próxima sección.</string>
    <string name="rbRespuesta1">Ayuntamiento</string>
    <string name="rbRespuesta2">Etxetzarra</string>
    <string name="rbRespuesta3">Caserío</string>
    //Activity Pantalla 5
    <string name="pregunata1pag4">1.¿Al lado de qué podemos encontrar la “Etxetzarra”?</string>
    <string name="respuesta11pag4">Al lado del cine del pueblo.</string>
    <string name="respuesta12pag4">Al lado de la casa de cultura del pueblo.</string>
    <string name="respuesta13pag4">Al lado del ayuntamiento del pueblo.</string>
    <string name="pregunata2pag4">2. ¿Qué tipo de edificio es la Etxetzarra?</string>
    <string name="respuesta21pag4">Un castillo de la época renacentista.</string>
    <string name="respuesta22pag4">Un edificio moderno del siglo XX.</string>
    <string name="respuesta23pag4">Un caserio antiguo vasco.</string>
    <string name="pregunata3pag4">3. ¿Qué representaban los caserios antiguamente?</string>
    <string name="respuesta31pag4">Edificio de la época romana.</string>
    <string name="respuesta32pag4">Un edificio vasco.</string>
    <string name="respuesta33pag4">Antiguos teatros de piedra.</string>
    <string name="pista1pregunta4">La "Etxetzarra" de Arrigorriaga está presente en la lista de patrimonio cultural
        e histórico publicada por el País Vasco. Este edificio es un caserío antiguo vasco, en él, vivían habitantes de
        Arrigorriaga que se ocupaban de la ganadería y la agricultura. Estos caserios han sido siempre símbolo de identidad
        del País Vasco. Hoy en día algunos de estos caseríos son merecedores de ser patrimonio cultural según muchos
        vascos. Este es el cual encotramos al lado de la casa de cultura del pueblo
    </string>
    //Activity Pista 6
    <string name="pista6">Haz el siguiente puzzle para saber a donde tenéis que ir.</string>
    //Activity Pantalla 6
    //pregunta1
    <string name="jrgPregunta1">¿Cual es la finalidad de este edificio hoy en día?</string>
    <string name="jrgp1Opc1">Desarrollo cultural</string>
    <string name="jrgp1Opc2">Aprender mediante Juegos</string>
    <string name="jrgp1Opc3">Biblioteca</string>

    //pregunta 2
    <string name="jrgPregunta2">¿A que epoca hace referencia el palacio de Barua?</string>
    <string name="jrgp2Opc1">Siglo XX</string>
    <string name="jrgp2Opc2">Siglo XVI</string>
    <string name="jrgp2Opc3">Siglo XIX</string>

    //pregunta 3

    <string name="jrgPregunta3">¿En que calle esta situada la casa de cultura?</string>
    <string name="jrgp3Opc1">Calle Urgoriti</string>
    <string name="jrgp3Opc2">Calle Lonbo</string>
    <string name="jrgp3Opc3">Calle Kurutzea</string>


    //Activity Final
    <string name="tvfinal">¡FELICIDADES! Habéis tenido la oportunidad de conocer los edifios más importantes de nuestro pueblo y con ello un poco más de historia.\n\nEspero que cuando paséis al lado de ellos seáis conscientes de lo importante que son.¡Pasadlo bien!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
